cmake_minimum_required(VERSION 3.24)
project(Technopark_Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1
        "module 1/task1/task1.cpp")
add_executable(task2
        "module 1/task2/task2.cpp")
add_executable(task3
        "module 1/task3/task3.cpp")
add_executable(task4
        "module 1/task4/task4.cpp")
add_executable(task5
        "module 1/task5/task5.cpp")
add_executable(task6
        "module 1/task6/task6.cpp")
add_executable(task7
        "module 1/task7/task7.cpp")
add_executable(rk1_1
        "module 1/rk1/rk1_1.cpp")
add_executable(rk1_2
        "module 1/rk1/rk1_2.cpp")
add_executable(rk1_3
        "module 1/rk1/rk1_3.cpp")
add_executable(module2_task1
        "module 2/task1.cpp")
add_executable(module2_task2
        "module 2/task2.cpp")
add_executable(module2_task4
        "module 2/task4.cpp")
add_executable(rk2_1
        "module 2/rk2_1.cpp")
add_executable(rk2_2
        "module 2/rk2_2.cpp")
add_executable(rk2_3
        "module 2/rk2_3.cpp")
add_executable(module2_task3
        "module 2/task3.cpp")
add_executable(module2_task5
        "module 2/task5/task5.cpp")
add_executable(Graph1
        "module 3/task1/ListGraph.cpp" "module 3/task1/MatrixGraph.cpp" "module 3/task1/ArcGraph.cpp" "module 3/task1/SetGraph.cpp" "module 3/task1/main.cpp" "module 3/task1/ArcGraph.h" "module 3/task1/ListGraph.h" "module 3/task1/MatrixGraph.h" "module 3/task1/SetGraph.h" "module 3/task1/IGraph.h")
add_executable(module3_task2
        "module 3/task2.cpp")
add_executable(module3_task3
        "module 3/task3.cpp")
add_executable(module3_task4
        "module 3/task4.cpp")
add_executable(rk3_1
        "module 3/rk3_1.cpp")